# minority-game

./: .gitignore  Cargo.toml  README.md  minority.service
.github/workflows/: tests.yml
.rustme/: config.ron  docs.md  header.md
client/: Cargo.toml  bootstrap.html
client/src/: main.rs
coverage/: index.html
coverage/client/src/: index.html  main.rs.html
coverage/server/src/: index.html  main.rs.html  schema.rs.html  webserver.rs.html
coverage/shared/src/: index.html  lib.rs.html
main/: crates.js  search-index.js  settings.html  source-files.js
main/implementors/actionable/dispatcher/: trait.Dispatcher.js
main/implementors/bonsaidb_core/api/: trait.Api.js
main/implementors/bonsaidb_core/custom_api/: trait.CustomApi.js
main/implementors/bonsaidb_core/schema/: trait.Schema.js
main/implementors/bonsaidb_core/schema/collection/: trait.Collection.js  trait.DefaultSerialization.js
main/implementors/bonsaidb_core/schema/view/: trait.CollectionView.js  trait.CollectionViewSchema.js  trait.DefaultViewSerialization.js  trait.View.js
main/implementors/bonsaidb_server/api/: trait.Handler.js
main/implementors/bonsaidb_server/backend/: trait.Backend.js  trait.CustomApiDispatcher.js
main/implementors/bonsaidb_server/server/tcp/: trait.HttpService.js
main/implementors/core/clone/: trait.Clone.js
main/implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
main/implementors/core/default/: trait.Default.js
main/implementors/core/fmt/: trait.Debug.js
main/implementors/core/hash/: trait.Hash.js
main/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
main/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
main/implementors/gooey_widgets/component/: trait.Behavior.js
main/implementors/minority_game_server/: trait.CustomServerExt.js
main/implementors/serde/de/: trait.Deserialize.js
main/implementors/serde/ser/: trait.Serialize.js
main/minority_game_client/: all.html  enum.CounterWidgets.html  enum.DatabaseCommand.html  enum.GameInterfaceEvent.html  enum.GameWidgets.html  fn.client.html  fn.main.html  fn.process_database_commands.html  index.html  sidebar-items.js  struct.DatabaseContext.html  struct.GameInterface.html
main/minority_game_server/: all.html  constant.DATABASE_NAME.html  constant.HAD_FUN_HAPPINESS_MULTIPLIER.html  constant.SECONDS_PER_ROUND.html  constant.STAYED_IN_MULTIPLIER.html  constant.TOO_BUSY_HAPPINESS_MULTIPLIER.html  enum.ApiHandler.html  enum.Game.html  enum.GameState.html  fn.collect_players.html  fn.game_loop.html  fn.main.html  fn.play_game.html  fn.send_status_update.html  fn.sort_players.html  index.html  sidebar-items.js  struct.ApiDispatcher.html  trait.CustomServerExt.html
main/minority_game_server/schema/: constant.AUTHORITY.html  enum.GameSchema.html  index.html  sidebar-items.js  struct.Player.html  struct.PlayerByScore.html  struct.PlayerStats.html
main/minority_game_server/webserver/: constant.PKG_PATH.html  constant.STATIC_PATH.html  fn.index.html  fn.spa_index.html  fn.stats.html  fn.stats_template.html  fn.upgrade_websocket.html  index.html  sidebar-items.js  struct.RankedPlayer.html  struct.Stats.html  struct.WebServer.html
main/minority_game_shared/: all.html  enum.Api.html  enum.Choice.html  enum.Request.html  enum.Response.html  fn.happiness_as_whole_percent.html  fn.whole_percent.html  index.html  sidebar-items.js  struct.ChoiceSet.html  struct.RoundComplete.html  struct.RoundPending.html  struct.SetChoice.html  struct.SetTell.html  struct.Welcome.html
main/src/minority_game_client/: main.rs.html
main/src/minority_game_server/: main.rs.html  schema.rs.html  webserver.rs.html
main/src/minority_game_shared/: lib.rs.html
main/src/xtask/: main.rs.html
main/xtask/: all.html  enum.Args.html  fn.build_web_app.html  fn.execute_wasm_bindgen.html  fn.main.html  index.html  sidebar-items.js  struct.CodeCoverageConfig.html
server/: Cargo.toml
server/src/: index.html  main.rs  schema.rs  stats.tera.html  webserver.rs
shared/: Cargo.toml
shared/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
