[package]
name = "minority-game-client"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2021"
description = "The client portion of a simple example using a BonsaiDb server backend."
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
minority-game-shared = { path = "../shared" }
bonsaidb = { git = "https://github.com/khonsulabs/bonsaidb", branch = "main", features = [
    "client",
    "client-websockets",
] }
log = "0.4"
flume = "0.10"
async-trait = "0.1"
anyhow = "1"
cfg-if = "1"


[target.'cfg(target_arch = "wasm32")'.dependencies]
gooey = { git = "https://github.com/khonsulabs/gooey.git", branch = "main", default-features = false, features = [
    "frontend-browser",
    "async",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gooey = { git = "https://github.com/khonsulabs/gooey.git", branch = "main", default-features = false, features = [
    "frontend-kludgine",
    "async",
] }
tokio = { version = "1" }
