[package]
name = "minority-game-server"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2021"
description = "The server portion of a simple counter example."
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minority-game-shared = { path = "../shared", features = ["actionable-traits"] }
bonsaidb = { git = "https://github.com/khonsulabs/bonsaidb", branch = "main", features = [
    "server-full",
] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
actionable = "0.1.0-dev.2"
serde = { version = "1", features = ["derive"] }
log = "0.4"
approx = "0.5"
