[package]
name = "minority-game-server"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2021"
description = "The game server for Minority Game"
license = "MIT OR Apache-2.0"

[features]
acme = ["bonsaidb/server-acme"]

[dependencies]
minority-game-shared = { path = "../shared", features = ["actionable-traits"] }
bonsaidb = { git = "https://github.com/khonsulabs/bonsaidb", branch = "main", features = [
    "server",
    "server-websockets",
    "server-hyper",
    "server-cli",
    "bincode",
] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
actionable = "0.1.0-dev.2"
serde = { version = "1", features = ["derive"] }
log = "0.4"
approx = "0.5"
axum = "0.3"
tower-http = { version = "0.1", features = ["fs", "set-header"] }
hyper = { version = "0.14", features = ["server", "http1"] }
structopt = "0.3"
cfg-if = "1"
tera = "1"
futures = "0.3"
env_logger = "0.9"
rand = "0.8"
