[package]
name = "minority-game-server"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2021"
description = "The game server for Minority Game"
license = "MIT OR Apache-2.0"

[features]
acme = ["bonsaidb/server-acme"]

[dependencies]
minority-game-shared = { path = "../shared", features = ["actionable-traits"] }
bonsaidb = { git = "https://github.com/khonsulabs/bonsaidb", branch = "release", features = [
    "server",
    "server-websockets",
    # "server-hyper",
    "server-cli",
] }
tokio = { version = "1.16.1", features = ["full"] }
anyhow = "1.0.53"
actionable = "0.1.0"
serde = { version = "1.0.136", features = ["derive"] }
log = "0.4.14"
approx = "0.5.1"
clap = "3.0.14"
cfg-if = "1.0.0"
futures = "0.3.19"
env_logger = "0.9.0"
rand = "0.8.4"
